--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,13 @@ version: '3.8'
 
 services:
   jenkins:
-    image: docker.io/mguazzardo/pipe-seg
+    #image: docker.io/mguazzardo/pipe-seg
+    image: hdbarrios/jenkins-grupo-6-pin
     container_name: jenkins-curso
     ports:
       - "8088:8080"
     volumes:
-      - ./data/jenkins:/var/jenkins_home
+      #- ./data/jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - pin1-network
